# juce_basic_plugin

./: CMakeLists.txt
include/mylib/: mylib.h
src/: CMakeLists.txt
src/mylib/: CMakeLists.txt  mylib.c
src/plugin_example/: CMakeLists.txt  processor.cpp  processor.hpp
